--- a/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
+++ b/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
@@ -3,7 +3,7 @@
         <div class="card-title">
             <h4>{{chartTitle}}</h4>
         </div>
-        <p-dropdown [options]="featureRanges" [(ngModel)]="selectedDate" optionLabel="name" [showClear]="false"
+        <p-dropdown *ngIf="tempoStatCount>0" [options]="featureRanges" [(ngModel)]="selectedDate" optionLabel="name" [showClear]="false"
             styleClass="w-9rem" (onChange)="onDateChangeBarChart()">
         </p-dropdown>
     </div>
@@ -20,24 +20,30 @@
                 {{ totalTime }}
             </p>
         </div>
-        <div class="info">
-            <h6 class="m-0 mb-1 text-color-secondary font-normal">Total Distance</h6>
-            <p class="m-0 p-0 font-bold">
-                {{ aggregateDistance| number:'1.2-2' }} km
-            </p>
-        </div>
-        <div class="info">
-            <h6 class="m-0 mb-1 text-color-secondary font-normal">{{paceText}}</h6>
-            <p class="m-0 p-0 font-bold">
-                {{ aggregatePace }} /km
-            </p>
-        </div>
-        <div class="info">
-            <span class="pi pi-info-circle info-span" [pTooltip]="dynamicMessage" 
-            tooltipPosition="bottom"></span>
-            
-        </div>
         
+        @if (tempoStatCount===0){
+            <div class="info" >
+                <p-messages [(value)]="messages" [enableService]="false" [closable]="false" />
+            </div>
+        } @else if (tempoStatCount>0){
+            <div class="info">
+                <h6 class="m-0 mb-1 text-color-secondary font-normal">Total Distance</h6>
+                <p class="m-0 p-0 font-bold">
+                    {{ aggregateDistance| number:'1.2-2' }} km
+                </p>
+            </div>
+            <div class="info">
+                <h6 class="m-0 mb-1 text-color-secondary font-normal">{{paceText}}</h6>
+                <p class="m-0 p-0 font-bold">
+                    {{ aggregatePace }} /km
+                </p>
+            </div>
+            <div class="info">
+                <span class="pi pi-info-circle info-span" [pTooltip]="dynamicMessage" tooltipPosition="bottom"></span>
+            </div>
+        }
+        
+
     </div>
     <p-chart type="bar" height="530" [data]="chartData" [options]="chartOptions"></p-chart>
 </div>
