--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -4,16 +4,18 @@
 <p-confirmDialog />
 <!-- liked songs List -->
 <div class="palylist_table">
-    <!-- <p-table [value]="likedSongs" [rows]="pageSize" (onPage)="onPageChange($event)" [showCurrentPageReport]="true"
+    <p-table [value]="allLikedSongs" [rows]="pageSize" (onPage)="onPageChange($event)" [showCurrentPageReport]="true"
         [rowsPerPageOptions]="[10,25,50]" [totalRecords]="totalLikedSongsCount" [paginator]="true" sortField="added_at"
         (sortOrder)="1" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
         paginatorPosition="top" [(selection)]="selectedTracksList" [tableStyle]="{'min-width': '60rem'}"
-        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)"> -->
-    <p-table [value]="likedSongs" [lazy]="true" (onLazyLoad)="onPageChange($event)" [rows]="pageSize"
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)" #tableRef>
+    
+    
+        <!-- <p-table [value]="likedSongs" [lazy]="true" (onLazyLoad)="onPageChange($event)" [rows]="pageSize"
         [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="totalLikedSongsCount"
         [paginator]="true" #tableRef currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
         paginatorPosition="top" [(selection)]="selectedTracksList" [tableStyle]="{'min-width': '60rem'}"
-        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)"> -->
 
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
@@ -21,10 +23,10 @@
                 <h3>Liked Songs</h3>
                 <div class="flex flex-row align-items-center">
                     
-                    <div class="flex flex-row align-items-center" *ngIf="likedSongs.length > 0">
+                    <div class="flex flex-row align-items-center" *ngIf="allLikedSongs.length > 0">
                         <div>
                             <p-button [rounded]="true" severity="success" icon="pi pi-refresh "
-                                [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                                [disabled]="!showSummaryGraph " (onClick)="refreshGraphs()"
                                 pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
                         </div>
                         <div class="pr-3 ">
@@ -60,6 +62,9 @@
                                 playlist_add
                             </span>
                         </p-button>
+
+                        <p-button class="pr-2" [outlined]="true" icon="pi pi-filter-slash" (onClick)="clear(tableRef)"
+                        pTooltip="Clear filter(s)" tooltipPosition="bottom" />
                     </div>
                 </div>
             </div>
@@ -86,30 +91,41 @@
                 <th pSortableColumn="track.name">
                     Title
                     <p-sortIcon field="track.name" />
+                    <p-columnFilter type="text" field="track.name" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="artist">
                     Artist
                     <p-sortIcon field="artist" />
+                    <p-columnFilter type="text" field="artist" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="track.duration_ms">
                     Duration
                     <p-sortIcon field="track.duration_ms" />
+                    <p-columnFilter type="text" field="duration" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.tempo">
                     Tempo
                     <p-sortIcon field="audio_features.tempo" />
+                    <p-columnFilter type="numeric" field="audio_features.tempo" display="menu" [showOperator]="false">
+                    </p-columnFilter>
                 </th>
                 <th pSortableColumn="audio_features.danceability">
                     Danceability
                     <p-sortIcon field="audio_features.danceability" />
+                    <p-columnFilter type="numeric" field="audio_features.danceability" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.energy">
                     Energy
                     <p-sortIcon field="audio_features.energy" />
+                    <p-columnFilter type="numeric" field="audio_features.energy" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.loudness">
                     Loudness
                     <p-sortIcon field="audio_features.loudness" />
+                    <p-columnFilter type="numeric" field="audio_features.loudness" display="menu"
+                        [showOperator]="false" />
                 </th>
             </tr>
         </ng-template>
