solved bugs and fixes

--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -4,11 +4,14 @@
 <p-confirmDialog />
 
 <div class="palylist_table">
-    <p-table [value]="hisotryTracks" [rows]="limit" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
+    <!-- <p-table [value]="hisotryTracks" [rows]="limit" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         (onPage)="onPageChange($event)" [totalRecords]="hisotryTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="added_at"
         (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
-        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)"> -->
+    <p-table [value]="hisotryTracks" [rows]="limit" sortField="added_at" (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}"
+        [(selection)]="selectedTracksList" #tableRef (onRowReorder)="tableReordered($event)"
+        (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
@@ -43,7 +46,6 @@
                         <p-button class="pr-3 btn-grp-custom" [outlined]="!showSummaryGraph" size="small"
                             (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph" tooltipPosition="bottom"
                             icon="pi pi-chart-bar">
-
                         </p-button>
                     </div>
 
@@ -58,6 +60,9 @@
                             playlist_add
                         </span>
                     </p-button>
+
+                    <p-button class="pr-2" [outlined]="true" icon="pi pi-filter-slash" (onClick)="clear(tableRef)"
+                        pTooltip="Clear filter(s)" tooltipPosition="bottom" />
                 </div>
             </div>
             <div>
@@ -88,34 +93,45 @@
                 <th pSortableColumn="track.name">
                     Title
                     <p-sortIcon field="track.name" />
+                    <p-columnFilter type="text" field="track.name" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="artist">
                     Artist
                     <p-sortIcon field="artist" />
+                    <p-columnFilter type="text" field="artist" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="played_at">
                     Played At
                     <p-sortIcon field="played_at" />
+                    <p-columnFilter type="text" field="played_at" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="track.duration_ms">
                     Duration
                     <p-sortIcon field="track.duration_ms" />
+                    <p-columnFilter type="text" field="duration" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.tempo">
                     Tempo
                     <p-sortIcon field="audio_features.tempo" />
+                    <p-columnFilter type="numeric" field="audio_features.tempo" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.danceability">
                     Danceability
                     <p-sortIcon field="audio_features.danceability" />
+                    <p-columnFilter type="numeric" field="audio_features.danceability" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.energy">
                     Energy
                     <p-sortIcon field="audio_features.energy" />
+                    <p-columnFilter type="numeric" field="audio_features.energy" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.loudness">
                     Loudness
                     <p-sortIcon field="audio_features.loudness" />
+                    <p-columnFilter type="numeric" field="audio_features.loudness" display="menu"
+                        [showOperator]="false" />
                 </th>
             </tr>
         </ng-template>
