--- a/src/app/spotify/track-details/track-details.component.html
+++ b/src/app/spotify/track-details/track-details.component.html
@@ -9,8 +9,8 @@
         [tableStyle]="{'min-width': '60rem'}">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
-                <h3>Audio Details</h3>
-                <h3>{{trackName}}</h3>
+                <h2>Audio History</h2>
+                <h3 class="pt-1">{{trackName}}</h3>
                 <div class="flex flex-row align-items-center">
                     <div>
                         <label class="mx-2">
@@ -32,8 +32,8 @@
                     </div>
                     <div>
                         <p-button (click)="redirectBack()" class="mr-2" pTooltip="Back" tooltipPosition="bottom"
-                        size="small" pTooltip="Back" tooltipPosition="bottom">
-                        <span class="material-symbols-outlined">
+                         pTooltip="Back" tooltipPosition="bottom" icon="material-icons">
+                        <span class="material-icons">
                             undo
                         </span>
                     </p-button>
@@ -64,16 +64,16 @@
                 <td>
                     @if(index>0){
                     @if(trackDetails[index-1].pace<trackDetails[index].pace || index===0){ <span
-                        class="material-symbols-outlined text-green-800">
+                        class="material-icons text-green-800">
                         trending_up
                         </span>
                         }@else{
-                        <span class="material-symbols-outlined text-red-600">
+                        <span class="material-icons text-red-600">
                             trending_down
                         </span>
                         }
                         }@else {
-                        <span class="material-symbols-outlined text-green-800">
+                        <span class="material-icons text-green-800">
                             trending_up
                         </span>
                         }
@@ -82,16 +82,16 @@
                 <td>
                     @if(index>0){
                     @if(trackDetails[index-1].speed<trackDetails[index].speed || index===0){ <span
-                        class="material-symbols-outlined text-green-800">
+                        class="material-icons text-green-800">
                         trending_up
                         </span>
                         }@else{
-                        <span class="material-symbols-outlined text-red-600">
+                        <span class="material-icons text-red-600">
                             trending_down
                         </span>
                         }
                         }@else {
-                        <span class="material-symbols-outlined text-green-800">
+                        <span class="material-icons text-green-800">
                             trending_up
                         </span>
                         }
