--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
                     <li (click)="navigateToPath('/spotify/audio-library')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
-                            <span class="material-symbols-outlined mr-2">
+                            <span class="material-icons mr-2">
                                 library_music
                                 </span>
                             <span class="font-medium">Audio Library</span>
