--- a/src/app/spotify/playlist/playlist.component.html
+++ b/src/app/spotify/playlist/playlist.component.html
@@ -15,7 +15,7 @@
 
 <section class="playlist_pagetitle_section" *ngIf="!showTracks && !showAudioFeatures">
     <div class="flex">
-        <div class="flex flex-1 playlist_pagetitle justify-content-center m-2 px-5 py-3">
+        <div class="flex flex-1 playlist_pagetitle justify-content-start m-2 px-5 py-3">
             <h2>Playlists</h2>
         </div>
         <div class="m-3 btn_grp_short">
