--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -25,9 +25,9 @@
 
                     <div class="flex flex-row align-items-center" *ngIf="allLikedSongs.length > 0">
                         <div>
-                            <p-button  severity="success" icon="pi pi-refresh "
-                                [disabled]="!showSummaryGraph " (onClick)="refreshGraphs()" pTooltip="Refresh Graph"
-                                tooltipPosition="bottom" class="px-2"></p-button>
+                            <p-button severity="success" icon="pi pi-refresh " [disabled]="!showSummaryGraph "
+                                (onClick)="refreshGraphs()" pTooltip="Refresh Graph" tooltipPosition="bottom"
+                                class="px-2"></p-button>
                         </div>
                         <div class="pr-2 ">
                             <!-- <p-buttonGroup class="btn-grp-custom">
@@ -45,7 +45,7 @@
                                     </span>
                                 </p-button>
                             </p-buttonGroup> -->
-                            <p-button class=" btn-grp-custom" [outlined]="!showSummaryGraph" size="small"
+                            <p-button class=" btn-grp-custom" [outlined]="!showSummaryGraph"
                                 (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph"
                                 tooltipPosition="bottom" icon="material-icons">
                                 <span class="material-icons">
@@ -58,7 +58,7 @@
                             [disabled]="selectedTracksList.length===0" icon="pi pi-save" iconPos="right"
                             pTooltip="Add tracks to existing playlist" tooltipPosition="bottom"></p-button>
 
-                        <p-button class="mr-2" severity="success" size="small" pTooltip="Save tracks as a new playlist"
+                        <p-button class="mr-2" severity="success" pTooltip="Save tracks as a new playlist"
                             [disabled]="selectedTracksList.length===0" tooltipPosition="bottom"
                             (onClick)="plNameVisible=true" icon="material-icons">
                             <span class="material-icons">
